--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
         <td th:text="${person.lastName}" Last Name></td>
         <td th:text="${person.patronymic}" Patronymic></td>
         <td th:text="${person.birthday}" Data of Birth></td>
-        <td th:text="${person.partner}" Partner></td>
+        <td th:text="${person.partnerId}" Partner></td>
         <td colspan="2">
             <button type="submit">
                 <a th:href="@{/info/{id}(id=${person.id})}">Info</a>
